Apache SIS Change Log
======================
Release 0.1-incubating (Current Development)

* SIS-15 Bake in Demo JSP page for initial release (mattmann, nchung)

* SIS-3 Refactor SIS (Nga Chung, mattmann)

* SIS-7 Top level pom for SIS (mattmann)

* SIS-5 Website logo (mattmann)

* SIS-2 Stand up SIS website (mattmann)

* SIS-6 Create DOAP file for projects.a.o (mattmann)

* SIS-4 Add test data (pjaol)

* SIS-1 Import LocalLucene (mattmann)